--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,73 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0;
+    box-sizing: border-box;
 }
 header{
-    height: 80px
+    height: 60px;
+    margin-bottom: 10px;
 }
+button{
+    border: none;
+    border-radius: 5px;
+}
+
 .container{
     width: 800px;
     height: 800px;
-    border: 1px solid blue;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
+    background-color: rgba(255, 255, 255, 1);
+    color: #000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.05),
+    0px 0px 0px 1px rgba(209,213,219,1) inset;
 }
 .square{
     box-sizing: border-box;
+    cursor: crosshair;
+    box-shadow: 0 0 4px rgb(211, 209, 209);
+}
+.colour-pickers{
+    width: 40%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.colour-picker{
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
     border: 1px solid black;
+}
 
+.red{
+    background-color: red;
+}
+.blue{
+    background-color: blue;
+}
+.yellow{
+    background-color: yellow;
+}
+.green{
+    background-color: green;
+}
+.purple{
+    background-color: purple;
+}
+.pink{
+    background-color: pink;
+}
+.eraser{
+    background-color: white;
+}
+
+.top{
+    width: 800px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10px;
 }
